FEAT: use JpaRepository & fatch posts by userId