@@ -4,7 +4,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
@@ -12,72 +11,56 @@ import com.blog.modules.post.domain.model.Post;
 import com.blog.modules.post.domain.port.out.PostRepository;
 
 import jakarta.persistence.EntityManager;
-import jakarta.persistence.TypedQuery;
-import jakarta.transaction.Transactional;
 
 @Repository
 public class PostRepositoryImpl implements PostRepository {
 
+    private final SpringDataPostRepository jpaRepository;
     private final EntityManager entityManager;
 
-    public PostRepositoryImpl(EntityManager entityManager) {
+    public PostRepositoryImpl(SpringDataPostRepository jpaRepository, EntityManager entityManager) {
+        this.jpaRepository = jpaRepository;
         this.entityManager = entityManager;
     }
 
+    // --- CRUD operations ---
     @Override
     public List<Post> findAll() {
-        TypedQuery<PostEntity> query = entityManager.createQuery("SELECT u FROM PostEntity u", PostEntity.class);
-        return query.getResultList().stream()
+        return jpaRepository.findAll().stream()
                 .map(PostMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Optional<Post> findById(UUID id) {
-        PostEntity entity = entityManager.find(PostEntity.class, id);
-        return Optional.ofNullable(PostMapper.toDomain(entity));
+        return jpaRepository.findById(id).map(PostMapper::toDomain);
     }
 
     @Override
     public List<Post> findByUserId(UUID userId) {
-        TypedQuery<PostEntity> query = entityManager.createQuery(
-                "SELECT p FROM PostEntity p WHERE p.userId = :userId", PostEntity.class);
-        query.setParameter("userId", userId);
-
-        return query.getResultList().stream()
+        return jpaRepository.findByUserId(userId).stream()
                 .map(PostMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    @Transactional
     public Post save(Post post) {
         PostEntity entity = PostMapper.toEntity(post);
-        entity = entityManager.merge(entity);
-        return PostMapper.toDomain(entity);
+        return PostMapper.toDomain(jpaRepository.save(entity));
     }
 
     @Override
-    @Transactional
+    public void deleteById(UUID id) {
+        jpaRepository.deleteById(id);
+    }
+
+    // --- Custom operations ---
+    @Override
     public void attachMediaToPost(UUID postId, UUID mediaId) {
         PostMediaEntity entity = new PostMediaEntity(postId, mediaId, Instant.now());
         entityManager.persist(entity);
     }
 
-    // @Override
-    // public void incrementLikesCount(UUID postId) {
-    //     PostEntity post = entityManager.find(PostEntity.class, postId);
-    //     if (post != null) {
-    //         post.setLikesCount(post.getLikesCount() + 1);
-    //     }
-    // }
-    // @Override
-    // public void decrementLikesCount(UUID postId) {
-    //     PostEntity post = entityManager.find(PostEntity.class, postId);
-    //     if (post != null) {
-    //         post.setLikesCount(post.getLikesCount() - 1);
-    //     }
-    // }
     @Override
     public void incrementLikesCount(UUID postId) {
         entityManager.createQuery("""
@@ -112,7 +95,6 @@ public class PostRepositoryImpl implements PostRepository {
     }
 
     @Override
-    @Transactional
     public void deletePostMediaLinks(UUID postId) {
         entityManager.createQuery("""
         DELETE FROM PostMediaEntity pm
@@ -122,9 +104,9 @@ public class PostRepositoryImpl implements PostRepository {
                 .executeUpdate();
     }
 
-    @Transactional
+    @Override
     public void deleteMediaLinks(UUID mediaId) {
-                    entityManager.createQuery("""
+        entityManager.createQuery("""
                     DELETE FROM PostMediaEntity pm
                     WHERE pm.id.mediaId = :mediaId
                 """)
@@ -133,45 +115,8 @@ public class PostRepositoryImpl implements PostRepository {
     }
 
     @Override
-    @Transactional
-    public void deleteById(UUID id) {
-        deletePostMediaLinks(id);
-
-        PostEntity entity = entityManager.find(PostEntity.class, id);
-        if (entity != null) {
-            entityManager.remove(entity);
-        }
-    }
-
-    // private final MongoTemplate mongoTemplate;
-    // public PostRepositoryImpl(MongoTemplate mongoTemplate) {
-    //     this.mongoTemplate = mongoTemplate;
-    // }
-    // @Override
-    // public Post save(Post post) {
-    //     return mongoTemplate.save(post);
-    // }
-    // @Override
-    // public Optional<Post> findById(String id) {
-    //     Post post = mongoTemplate.findById(id, Post.class);
-    //     return Optional.ofNullable(post);
-    // }
-    // @Override
-    // public List<Post> findByUserId(String userId) {
-    //     Query query = new Query();
-    //     query.addCriteria(Criteria.where("userId").is(userId));
-    //     return mongoTemplate.find(query, Post.class);
-    // }
-    @Transactional
     public void hidePostById(UUID postId) {
         // TODO Auto-generated method stub
         throw new UnsupportedOperationException("Unimplemented method 'hidePostById'");
     }
-
-    // @Override
-    // public void deleteById(String id) {
-    //     Query query = new Query();
-    //     query.addCriteria(Criteria.where("id").is(id));
-    //     mongoTemplate.remove(query, Post.class);
-    // }
 }
